--- a/template/principal.html
+++ b/template/principal.html
@@ -6,7 +6,7 @@
 
 <body>
 	{% block content %}
-		
+		{% include "template/menu.html" %}
 	{% if user.is_authenticated and user.is_active %}
 	<div align="right">
    		Logueado como: <a href="{% url 'logout' %}">{{ user.username|upper }}</a><br>
