correcciones de errores

--- a/template/menu.html
+++ b/template/menu.html
@@ -22,6 +22,8 @@
   <li><a href="#">Docentes</a></li>
   <li><a href="#">Estudiantes</a></li>
   <li><a href="#">Preguntas (items)</a></li>
+  <li class="divider"></li>
+  <li><a href="{% url 'usuarioListar' %}">Usuarios</a></li>
 </ul>
 
 <br>
